--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@prisma/client": "5.20.0",
     "@types/express": "^5.0.0",
+    "@types/nodemailer": "^6.4.16",
     "express": "^4.21.0",
+    "nodemailer": "^6.9.15",
     "prisma": "^5.20.0",
     "zod": "^3.23.8"
   }
