--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch index.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
@@ -14,11 +17,14 @@
   },
   "dependencies": {
     "@prisma/client": "5.20.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/nodemailer": "^6.4.16",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "nodemailer": "^6.9.15",
     "prisma": "^5.20.0",
+    "tsx": "^4.19.1",
     "zod": "^3.23.8"
   }
 }
