--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@prisma/client": "5.20.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "^6.4.16",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
     "prisma": "^5.20.0",
     "tsx": "^4.19.1",
